bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: not found: value ||
  if (n-100<=10) || (n-200<=10){
                 ^