bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (n-100<=10) || (n-200<=10){
    return(true)
    
  }else{
    return(false)
  }
}